# muphasa

./: LICENSE  README.md
mph/: CMakeLists.txt  IO.h  Makefile  cmake_install.cmake  column.h  examples.h  grade.h  input_file  landscapes.h  main.cpp  main.h  matrix.h  mph  mph.out  signatureColumn.h  utils.h
mph.xcodeproj/: project.pbxproj
mph.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mph.xcodeproj/project.xcworkspace/xcuserdata/oliver.xcuserdatad/: UserInterfaceState.xcuserstate
mph.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
mph.xcodeproj/xcshareddata/xcschemes/: mph.xcscheme
mph.xcodeproj/xcuserdata/oliver.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mph.xcodeproj/xcuserdata/oliver.xcuserdatad/xcschemes/: mph.xcscheme  xcschememanagement.plist
mph.xcodeproj/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
mph.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
mph/examples/: example1.txt  example2.firep
python/.ipynb_checkpoints/: examples-checkpoint.ipynb
python/mph.py/: setup.py
python/mph.py/mph/: Makefile  mph.py  pyMPH.cpp  pyMPH.pxd  pyMPH.pyx
python/mph.py/mph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/notebooks/: Spatiotemporal.ipynb  boids_offline.py  boids_simulation.py  examples.ipynb  test
python/notebooks/.ipynb_checkpoints/: examples-checkpoint.ipynb
scripts/: install_python_interface
